src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  transform: translateZ(0);
  background: linear-gradient(rgba(50,50,255,.4), rgba(200,50,200,.3));
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 100vh;
  overflow-x: hidden;
  font-size: 1.2rem;
  font-family: 'Roboto', sans-serif;
}

a{
  text-decoration: none;
  color: black;
}
a:hover{
  text-decoration: none;
}

.menu-link{
  padding-top: 15px;
  transition: 400ms;
  width: 100%;
  text-align: center;
  color: #e7e7e7;
}
.menu-link:hover{
  color: rgba(5, 244, 255, 1);;
}
.menu-link .line{
  margin: auto;
  margin-top: 15px;
  width: 70%;
  border-bottom: 1px solid rgba(255,255,255,.2);
  transition: 400ms
}
.menu-link:hover .line{
  width: 25%;
  border-bottom: 1px solid rgba(5, 244, 255, 1);
}

.loader-box{
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 60vh;
}
.loader-box.active{
  filter: blur(5px);
}

@media (min-width: 992px){
  .loader-box.active{
    filter: blur(0px);
  }
}

